# UDP_IaaS

./: .gitignore  CMakeLists.txt  README.md  go.mod  go.sum  main.go
console/: index.html
console-src/: package-lock.json  package.json
console-src/src/lib/: utils.js
console-src/src/routes/: +layout.svelte  +page.svelte
data/system/: base.go  get_info.go  get_iso.go  model.go
data/vm/: base.go  create.go  list.go  model.go
docs/: docs.go  swagger.json  swagger.yaml
handlers/: handleCreateVM.go  handleDeleteVM.go  handleDetachISO.go  handleGetVMState.go  handleGetVNCPort.go  handleHealthCheck.go  handleISOs.go  handleListISOs.go  handleListVMs.go  handleStartVM.go  handleStopVM.go  handleUploadISO.go  handleVMs.go  handlers.go
include/cli/: CLI.hpp
include/udp_iaas/: Domain.hpp  LibvirtConnection.hpp
libvirt/: isoOps.go  libvirt.go  vmOps.go  xmlTemplates.go
service/system/: base.go  get_info.go  get_iso.go
service/vm/: base.go  create.go  list.go
src/: Domain.cpp  LibvirtConnection.cpp  main.cpp
src/api/handler/: ListVM.go  status.go
src/api/router/: router.go
src/cli/: CLI.cpp
src/iaas/: Domain.cpp  LibvirtConnection.cpp
src/libvirt/: client.go
src/storage/badger/: client.go
static/: app.js  index.html  isos.html  style.css  vm.html
static/_app/: version.json
static/js/: app.js  iso-manager.js  modal-manager.js  navigation.js  utils.js  vm-manager.js
types/: type.go  websockify.go
web/handler/system/: base.go  get_info.go  get_iso.go
web/handler/vm/: base.go  create.go  list.go
web/router/: router.go
(+31 files in other folders)
